--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+title:              Chandra Sekhar Guptha
+email:              gupthaaravapalli97@gmail.com
+description:        Math, Computer and Data Science
+author:             guptha23
+baseurl:            ""
+url:                "https://guptha23.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
