--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ linkedin_username:
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
+future:             false
 markdown:           kramdown
 paginate:           5
 paginate_path:      "/posts/page:num/"
@@ -23,3 +24,4 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
+highlighter: rouge
